--- a/main.html
+++ b/main.html
@@ -7,6 +7,17 @@
 </head>
 
 <body>
+	<div class="container">
+		<h2>Testimonials</h2>
+		<div class="test">
+			<p>CSS Animation and Media Queries Revision,  Intro to HTML & CSS - MARCH</p>
+			<p class="author">-<i>John Doe</i></p>
+		</div>
+		<div class="test">
+			<p>CSS Animation and Media Queries Revision,  Intro to HTML & CSS - MARCH</p>
+			<p class="author">-<i>John Doe</i></p>
+		</div>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
