--- a/main.html
+++ b/main.html
@@ -8,14 +8,14 @@
 
 <body>
 	<div class="container">
-		<h2>Testimonials</h2>
+		<h1>Testimonials</h1>
 		<div class="test">
 			<p>CSS Animation and Media Queries Revision,  Intro to HTML & CSS - MARCH</p>
-			<p class="author">-<i>John Doe</i></p>
+			<p class="author">-John Doe</p>
 		</div>
 		<div class="test">
 			<p>CSS Animation and Media Queries Revision,  Intro to HTML & CSS - MARCH</p>
-			<p class="author">-<i>John Doe</i></p>
+			<p class="author">-John Doe</p>
 		</div>
 	</div>
 	<!-- the entire body must be written by student -->
